export interface RequiredStaff {
    staffQuantity: number;
    function: string;
    specialization: string;
  }